# iris_readout

./: LICENSE  README.md  configure.ac
data/: sample_ramp.fits
src/: Makefile.am  drsrop.c  drsrop.h  iris_readout.8  iris_readout.c  iris_readout.h  tests.c
